--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ matplotlib==3.9.2
 numpy==2.0.2 --only-binary=:all:
 pandas==2.2.3 --only-binary=:all:
 requests==2.32.3
-scikit-learn==1.2.2 --only-binary=:all:
+scikit-learn==1.4.2
 scipy==1.13.1
 streamlit==1.39.0
 urllib3==2.2.3
